force-app/main/default/objects/Object_Conversion_Field_Map__mdt/fields/Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field__c</fullName>
    <label>Condition Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>