force-app/main/default/objects/Object_Conversion_Field_Map__mdt/fields/Condition_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field_Type__c</fullName>
    <label>Condition Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>in List</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>