force-app/main/default/objects/Object_Conversion_Field_Map__mdt/fields/Condition_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field_Value__c</fullName>
    <label>Condition Field Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>