force-app/main/default/objects/Object_Conversion_Field_Map__mdt/fields/Is_Array__c.field-meta.xml
<CustomField>
    <fullName>Is_Array__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Array?</label>
    <type>Checkbox</type>
</CustomField>