force-app/main/default/objects/Object_Conversion_Field_Map__mdt/fields/Not_equal_Condition__c.field-meta.xml
<CustomField>
    <fullName>Not_equal_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not equal Condition</label>
    <type>Checkbox</type>
</CustomField>