force-app/main/default/objects/Object_Conversion_Field_Map__mdt/fields/Object_Conversion_Map__c.field-meta.xml
<CustomField>
    <fullName>Object_Conversion_Map__c</fullName>
    <label>Object Conversion Map</label>
    <referenceTo>Object_Conversion_Map__mdt</referenceTo>
    <relationshipLabel>Object Conversion Field Maps</relationshipLabel>
    <relationshipName>Object_Conversion_Field_Maps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>