force-app/main/default/objects/Object_Conversion_Field_Map__mdt/fields/Reference_Map__c.field-meta.xml
<CustomField>
    <fullName>Reference_Map__c</fullName>
    <label>Reference Map (only for integration)</label>
    <referenceTo>Object_Conversion_Map__mdt</referenceTo>
    <relationshipLabel>Object Conversion Field Maps (Reference Map (only for integration))</relationshipLabel>
    <relationshipName>Object_Conversion_Field_Maps1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>