force-app/main/default/objects/Object_Conversion_Field_Map__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Destination_Field__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Fixed_Value__c</columns>
    <columns>Condition_Field__c</columns>
    <columns>Object_Conversion_Map__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>